# HighLevel-Robotics-Modules

./: .gitignore  README.md
Algos/: CMakeLists.txt  kd_tree.cpp  kd_tree.hpp  nearest_neighbors.cpp  nearest_neighbors.hpp
DataStructures/: CMakeLists.txt  Graph.cpp  Graph.hpp  GraphTest.cpp
FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.hpp  FeatureExtractionTest.cpp  utils.cpp  utils.hpp
LinuxSerial/: BNO055-I2CExample.hpp  GPIO (conflicted).h  GPIO.c  GPIO.h  I2C.cpp  I2C.hpp  SPI.c  SPI.h  Serial.cpp  Serial.hpp  UART.c  UART.h  USB.c
Localization/: CMakeLists.txt  ParticleFilter.cpp  ParticleFilter.hpp  ParticleFilterTest.cpp  utils.hpp
Manipulator/: forward_kinematics.cpp
Mapping/: CMakeLists.txt  MapBuilder.cpp  MapBuilder.hpp  OccupancyGrid.cpp  OccupancyGrid.hpp  OccupancyGridTest.cpp  note.txt  utils.cpp  utils.hpp
Navigation/: CMakeLists.txt  DynamicWindow.cpp  DynamicWindow.hpp  FrontierExploration.cpp  FrontierExploration.hpp  PID.cpp  PID.hpp
Odometry/: Odometry.cpp  Odometry.hpp
PathPlanning/: AStar.cpp  AStar.hpp  AStarTest.cpp  BUG.cpp  BUG.hpp  BUGTest.cpp  CMakeLists.txt  PathUtil.cpp  PathUtil.hpp  RRT.cpp  RRT.hpp  RRTTest.cpp
SLAM/: CMakeLists.txt  EKFSLAM.cpp  EKFSLAM.hpp  EKFSLAMTest.cpp  PoseGraphOptSLAM.cpp  PoseGraphOptSLAM.hpp  PoseGraphOptSLAMTest.cpp  README.md  utils.cpp  utils.hpp
ScanMatching/: CMakeLists.txt  ICP.cpp  ICP.hpp  ICPTest.cpp  utils.hpp
UnitTests/: AStarTest.cpp  BUGTest.cpp  EKFSLAMTest.cpp  FeatureExtractionTest.cpp  GraphTest.cpp  ICPTest.cpp  OccupancyGridTest.cpp  ParticleFilterTest.cpp  PoseGraphOptSLAMTest.cpp  README.md  RRTTest.cpp  kd_treeTest.cpp
